--- a/css/projects.css
+++ b/css/projects.css
@@ -70,11 +70,7 @@ p {
     font-size: 20px;
     line-height: 1.2em;
 }
-.project-images {
 
-   
-    
-}
 
 .project-button {
     margin: 20px 0 30px 0;
